<?xml version="1.0"?>
<package format="3">
  <name>mission_mode</name>
  <version>5.4.1</version>
  <description>GUI for selecting global flight mode</description>

  <maintainer email="brett@todo.todo">brett</maintainer>
  <license>MIT</license>

  <!-- <buildtool_depend>ament_cmake_ros</buildtool_depend> -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- <depend>rclpy</depend> -->
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>std_msgs</depend>
  <depend>std_srv</depend>

  <depend>builtin_interfaces</depend>

  <build_depend>message_generation</build_depend>
  <!-- <build_depend>rosidl_default_generators</build_depend> -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
     <!-- <build_type>ament_python</build_type> -->
     <build_type>ament_cmake</build_type>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
